# sandbox

./: .gitignore  .gitmodules
aes-encryption/: .gitignore  Makefile  aes.c  aes.h  main.c
can-adapter-pcb/: can-adapter.kicad_pcb  can-adapter.kicad_pro  can-adapter.kicad_sch  fp-lib-table  sym-lib-table
can-adapter-pcb/lib/ATA6560-GBQW-N/: ATA6560-GBQW-N.kicad_sym  ATA6560-GBQW-N.stp  SON65P300X300X90-9N-D.kicad_mod
can-adapter-pcb/lib/PIC18F26Q83T-I5N/: PIC18F26Q83T-I_5N.kicad_sym  QFN65P600X600X100-29N-D.kicad_mod
can-lin-bridge/: can-lin-bridge.kicad_pcb  can-lin-bridge.kicad_pro  can-lin-bridge.kicad_sch  fp-lib-table
can-lin-bridge/lib/PIC18F26Q83T-I5N/: PIC18F26Q83T-I_5N.kicad_sym  PIC18F26Q83T-I_5N.stp
fan-board-interface/: at24c128.py
fpga-video-sim/: Cargo.toml
fpga-video-sim/src/: main.rs
fpga-video-sim/src/rtl/: top.sv  video_timing_gen.sv
fpga-video-sim/tests/: test_video_timing_gen.py  video_timing_gen.rs
i2c-eeprom-sim/rtl/: at24c02.sv  at24c02_ctl.sv
i2c-eeprom-sim/test/: at24c02_ctl_tb.sv
kernel-modules/: Makefile  addition.c  char_test.c  hello.c
minesweeper/: Makefile
minesweeper/src/: main.c  minefield.c  minefield.h
ollama-test/: main.py
sdl/: .gitignore  CMakeLists.txt  README.md  fetch_dependencies.cmake
sdl/src/: main.cpp
tca9539-model/: tca9539-model.xpr
tca9539-model/src/: tca9539.sv
youtube-song-info/: main.py
zephyr/blinky/: CMakeLists.txt
zephyr/canbus/: CMakeLists.txt
zephyr/lvgl-threads/: CMakeLists.txt  prj.conf
zephyr/threads/: CMakeLists.txt
zephyr/threads-share/: CMakeLists.txt
(+25 files in other folders)
